load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "bits",
    hdrs = ["bits.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/numeric:bits",
    ],
)

cc_binary(
    name = "bits_bin",
    srcs = ["bits_bin.cc"],
    deps = [
        ":bits",
        "@google_benchmark//:benchmark",
    ],
)

cc_library(
    name = "cycle_clock_utils",
    hdrs = ["cycle_clock_utils.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "tightloop_lib",
    srcs = ["tightloop_lib.cc"],
    hdrs = ["tightloop_lib.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":bits",
        ":cycle_clock_utils",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_binary(
    name = "tightloop",
    srcs = ["tightloop.cc"],
    features = ["fully_static_link"],
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        ":tightloop_lib",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:initialize",
    ],
)

cc_test(
    name = "tightloop_test",
    srcs = ["tightloop_test.cc"],
    deps = [
        ":bits",
        ":time_histogram",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/random",
        "@google_benchmark//:benchmark",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tightloop_benchmarks",
    srcs = ["tightloop_benchmarks.cc"],
    deps = [
        ":bits",
        ":time_histogram",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/random",
        "@google_benchmark//:benchmark_main",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "time_histogram",
    srcs = ["time_histogram.cc"],
    hdrs = ["time_histogram.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":cycle_clock_utils",
        "@abseil-cpp//absl/numeric:bits",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "time_histogram_test",
    size = "small",
    srcs = ["time_histogram_test.cc"],
    deps = [
        ":time_histogram",
        "@abseil-cpp//absl/log",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "time_histogram_benchmarks",
    srcs = ["time_histogram_benchmarks.cc"],
    args = [
        "--benchmark_filter=all",
    ],
    deps = [
        ":time_histogram",
        "@abseil-cpp//absl/log",
        "@google_benchmark//:benchmark_main",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
