load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "tuple_unwrapping_test",
    size = "small",
    srcs = ["tuple_unwrapping_test.cc"],
    visibility = ["//visibility:private"],
    deps = [
        "@abseil-cpp//absl/log",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
