cc_library(
    name="simple_token_bucket",
    srcs=["simple_token_bucket.cc"],
    hdrs=["simple_token_bucket.h"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/time",
        ],
)

cc_test(
    name = "simple_token_bucket_test",
    size = "small",
    srcs = ["simple_token_bucket_test.cc"],
    visibility = ["//visibility:private"],
    deps = [
        ":simple_token_bucket",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name="rate_token_bucket",
    hdrs=["rate_token_bucket.h"],
    deps = [
        ":simple_token_bucket",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/time",
        ],
)

cc_test(
    name = "rate_token_bucket_test",
    size = "small",
    srcs = ["rate_token_bucket_test.cc"],
    visibility = ["//visibility:private"],
    deps = [
        ":rate_token_bucket",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name="burst_token_bucket",
    hdrs=["burst_token_bucket.h"],
    srcs=["burst_token_bucket.cc"],
    deps = [
        ":simple_token_bucket",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/time",
        ],
)

cc_test(
    name = "burst_token_bucket_test",
    size = "small",
    srcs = ["burst_token_bucket_test.cc"],
    visibility = ["//visibility:private"],
    deps = [
        ":burst_token_bucket",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name="token_bucket_demo",
    srcs=["token_bucket_demo.cc"],
    deps = [
        ":simple_token_bucket",
        ":rate_token_bucket",
        ":burst_token_bucket",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/status",
        ],
)

